--- a/template/scss/patterns/_content.scss
+++ b/template/scss/patterns/_content.scss
@@ -146,6 +146,7 @@
         }
     }
 
+
     &:last-child
     {
         border-bottom: 1px solid color($grey, light);
@@ -170,6 +171,10 @@
         width: $method__list__item__label-space - $x4;
 
         text-align: right;
+    }
+    @include respond-to(small-screens)
+    {
+        margin-left: -$x1;
     }
 
     .method__list:not(.is-empty)
